Update frontend and backend poms to build a docker image with jib. Fix frontend unit tests Add first cut of k8s manifests Fox typo in event processor